@startuml WTECH_datovy_faza2
left to right direction
skinparam linetype ortho
skinparam shadowing false
skinparam nodesep 80
skinparam ranksep 120

skinparam class {
  BackgroundColor     #FAFAFA
  BorderColor         #555555
  HeaderBackgroundColor #DEDEDE
  FontName            Arial
  FontSize            11
  AttributeFontName   Arial
  AttributeFontSize   10
}
skinparam ArrowColor  #444444
skinparam ArrowThickness 1.2

hide circle
hide methods

' ── Tabuľky ─────────────────────────────────────────────────────────────────

class "categories" as cat {
  <b>PK</b>  id : SERIAL
  ..
  name : VARCHAR(120)
  slug : VARCHAR(64) UNIQUE
}

class "products" as pro {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  category_id : BIGINT
  ..
  name : VARCHAR(255)
  slug : VARCHAR(255) UNIQUE
  description : TEXT
  price : DECIMAL(10,2)
  stock_quantity : INT
  is_active : BOOLEAN
  origin_label : VARCHAR(120)
  roast_level : VARCHAR(20)
  weight_grams : INT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "product_images" as pim {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  product_id : BIGINT
  ..
  path : VARCHAR(255)
  sort_order : INT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "users" as usr {
  <b>PK</b>  id : SERIAL
  ..
  name : VARCHAR(255)
  email : VARCHAR(255) UNIQUE
  password : VARCHAR(255)
  role : VARCHAR(20)
  email_verified_at : TIMESTAMPTZ
  remember_token : VARCHAR(100)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "cart_items" as crt {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  user_id : BIGINT NULL
  <color:#888>FK</color>  product_id : BIGINT
  ..
  session_id : VARCHAR(255)
  quantity : INT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "favorites" as fav {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  user_id : BIGINT
  <color:#888>FK</color>  product_id : BIGINT
  ..
  UNIQUE(user_id, product_id)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "addresses" as adr {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  user_id : BIGINT
  ..
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  email : VARCHAR(255)
  address_line : VARCHAR(255)
  city : VARCHAR(100)
  state : VARCHAR(100)
  postal_code : VARCHAR(20)
  is_default : BOOLEAN
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "orders" as ord {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  user_id : BIGINT NULL
  ..
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  email : VARCHAR(255)
  address_line : VARCHAR(255)
  city : VARCHAR(100)
  state : VARCHAR(100)
  postal_code : VARCHAR(20)
  shipping_method : VARCHAR(20)
  shipping_price : DECIMAL(10,2)
  subtotal : DECIMAL(10,2)
  tax : DECIMAL(10,2)
  total : DECIMAL(10,2)
  status : VARCHAR(20)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

class "order_items" as ori {
  <b>PK</b>  id : SERIAL
  <color:#888>FK</color>  order_id : BIGINT
  <color:#888>FK</color>  product_id : BIGINT NULL
  ..
  product_name : VARCHAR(255)
  unit_price : DECIMAL(10,2)
  quantity : INT
  line_total : DECIMAL(10,2)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

' ── Poradie (skryté) ────────────────────────────────────────────────────────
fav -[hidden]-> usr
adr -[hidden]-> usr

' ── Vzťahy ───────────────────────────────────────────────────────────────────
cat "1" -- "0..*" pro : category_id
pro "1" -- "0..*" pim : product_id
usr "0..1" -- "0..*" crt : user_id
pro "1" -- "0..*" crt : product_id
usr "1" -- "0..*" fav : user_id
pro "1" -- "0..*" fav : product_id
usr "1" -- "0..*" adr : user_id
usr "0..1" -- "0..*" ord : user_id
ord "1" -- "1..*" ori : order_id
pro "0..1" -- "0..*" ori : product_id

@enduml
